What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

August 11, 2011
* [mickael] Fixed issue #76
* [antonin] minor bug fix in configure.ac (credit to Vincent Torri)
* [mickael] fixed wrong patch with the return value of fgets into convert.c file
* [mickael] fixed build error with position of variable declaration after patch 856

August 10, 2011
! [mickael] removed unused parameters warnings with the solution proposed by myself and Bob Friesenhahn.
! [mickael] add copyright header into new test functions.
* [mickael] fixed glibc error with broken2 and broken4 images.
* [mickael] fixed segfault with 123.j2c and bug.j2c images (thanks to Tim Mattox for his improvement).
! [mickael] moved the definition of OPJ_ARG_NOT_USED from opj_includes.h to openjpeg.h
* [mickael] fixed error with the return value of fgets into convert.c file

August 9, 2011
- [antonin] removed xcode project files (cmake and autotools are now the only supported build methods)

July 29, 2011
! [mickael] solve some obvious warnings for WIN platform, increase number of warning reported on the dashboard, correct last warnings with gcc 4.4 (-Wall)
! [mickael] increase number of warning reported on the dashboard (forgot the file in the last commit)
! [mickael] update MJ2 CMakeLists regards to the new thirdparty strategy

July 27, 2011
! [mickael] added new decoding/dump tests based on data found in input/nonregresion repository (remove JPEG2000_CONFORMANCE_DATA_ROOT variable, add REF_DECODER_BIN_PATH variable for the encoder test suite). Remove definitively old tests. 
! [mickael] correct some warnings detected under unix platform

July 26, 2011
! [mickael] delete double semi-colon at end of line which generate crash on win platform
! [mickael] use ansi c function fgets instead of GNU function getline to avoid build error with win platform
! [mickael] correct CRLF problem between unix baseline and win platform test file generated by j2k_dump

July 25, 2011